Virtual tables API endpoints for sidecar for CASSANDRA-15124
